# stlsvg

./: .gitignore  build.sh  cgal.patch  default.nix  flake.nix  shell.nix  stlsvg.nix
.github/workflows/: deploy.yml
src/: CMakeLists.txt  emshell.html  orient.cpp  stlsvg.cpp
src/clipper/: clipper.cpp
